# docs/swagger.yaml
@@ -15,6 +15,62 @@ definitions:
       user_id:
         type: string
     type: object
+  model.SubscriptionCreateRequest:
+    properties:
+      end_date:
+        example: 2025-08
+        type: string
+      price:
+        example: 400
+        type: integer
+      service_name:
+        example: Yandex Plus
+        type: string
+      start_date:
+        example: 2025-04
+        type: string
+      user_id:
+        example: 1e4adfee-2bf1-4721-ae6f-7636e79a0cba
+        type: string
+    type: object
+  model.SubscriptionUpdateRequest:
+    properties:
+      end_date:
+        example: 2025-12
+        type: string
+      price:
+        example: 500
+        type: integer
+      service_name:
+        example: Yandex Plus
+        type: string
+      start_date:
+        example: 2025-05
+        type: string
+      user_id:
+        example: e9c3a059-089d-4c5b-b0cc-17b5a78bb6ef
+        type: string
+    type: object
+  model.TotalCostRequest:
+    properties:
+      end_date:
+        example: 2025-11
+        type: string
+      service_name:
+        example: Spotify
+        type: string
+      start_date:
+        example: 2025-07
+        type: string
+      user_id:
+        example: 60601fee-2bf1-4721-ae6f-7636e79a0cba
+        type: string
+    type: object
+  model.TotalCostResponse:
+    properties:
+      total_cost:
+        type: integer
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -50,12 +106,12 @@ paths:
       - application/json
       description: Создаёт новую подписку
       parameters:
-      - description: Подписка
+      - description: Данные подписки
         in: body
         name: subscription
         required: true
         schema:
-          $ref: '#/definitions/model.Subscription'
+          $ref: '#/definitions/model.SubscriptionCreateRequest'
       produces:
       - application/json
       responses:
@@ -63,11 +119,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Subscription'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
         "500":
           description: Internal Server Error
           schema:
@@ -90,11 +141,6 @@ paths:
           description: No Content
           schema:
             type: string
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
         "500":
           description: Internal Server Error
           schema:
@@ -118,16 +164,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Subscription'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties: true
-            type: object
         "500":
           description: Internal Server Error
           schema:
@@ -151,7 +187,7 @@ paths:
         name: subscription
         required: true
         schema:
-          $ref: '#/definitions/model.Subscription'
+          $ref: '#/definitions/model.SubscriptionUpdateRequest'
       produces:
       - application/json
       responses:
@@ -159,11 +195,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Subscription'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
         "500":
           description: Internal Server Error
           schema:
@@ -176,36 +207,19 @@ paths:
     get:
       description: Считает общую стоимость по фильтрам
       parameters:
-      - description: ID пользователя
-        in: query
-        name: user_id
-        type: string
-      - description: Название сервиса
-        in: query
-        name: service_name
-        type: string
-      - description: Начальная дата
-        in: query
-        name: start_date
-        type: string
-      - description: Конечная дата
-        in: query
-        name: end_date
-        type: string
+      - description: Период подписок
+        in: body
+        name: subscription
+        required: true
+        schema:
+          $ref: '#/definitions/model.TotalCostRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: successful operation
           schema:
-            additionalProperties:
-              type: number
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/model.TotalCostResponse'
         "500":
           description: Internal Server Error
           schema:
