# internal/model/subscription.go
@@ -1,14 +1,0 @@
-package model
-
-import (
-	"github.com/google/uuid"
-)
-
-type Subscription struct {
-	ID          uuid.UUID  `json:"id"`
-	ServiceName string     `json:"service_name"`
-	Price       int        `json:"price"`
-	UserID      string     `json:"user_id"`
-	StartDate   string  `json:"start_date"`
-	EndDate     *string `json:"end_date,omitempty"`
-}
